--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ build: false
 install:
   - pwsh: |
       Install-Module Configuration, Pester, InvokeBuild -Force -SkipPublisherCheck
+      Import-Module Invoke-Build
       Set-Location $env:APPVEYOR_BUILD_FOLDER
 
 build_script:
