--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ build: false
 install:
   - pwsh: |
       Install-Module Configuration, Pester, InvokeBuild -Force -SkipPublisherCheck
-      Import-Module Invoke-Build
+      Import-Module InvokeBuild
       Set-Location $env:APPVEYOR_BUILD_FOLDER
 
 build_script:
