--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ on_success:
   - ps: |
       $tagVersion = (git describe --tags --abbrev=0 2>$null) -replace "^v" -as [Version]
 
-      $shouldPublish = $env:APPVEYOR_REPO_BRANCH -eq 'master' -and
+      $shouldPublish = $env:APPVEYOR_REPO_BRANCH -in 'master', 'main' -and
           $tagVersion -and
           -not $env:APPVEYOR_PULL_REQUEST_NUMBER
 
@@ -52,7 +52,7 @@ on_success:
               if (-not $galleryVersion -or $buildVersion -gt $galleryModule.Version) {
                   .\build.ps1 -TaskName Publish
               } else {
-                  Write-Host ('Skipping publish: {0} is already published' -f $env:APPVEYOR_REPO_TAG_NAME) -ForegroundColor Green
+                  Write-Host ('Skipping publish: {0} is already published' -f $buildVersion) -ForegroundColor Green
               }
           } else {
               Write-Host ('Skipping publish: Tag {0} does not match build version {1}' -f $tagVersion, $buildVersion)
