--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,7 +49,7 @@ on_success:
           if ($tagVersion -eq $buildVersion) {
               $galleryModule = Find-Module $moduleManifestPath.BaseName -ErrorAction SilentlyContinue
 
-              if (-not $galleryVersion -or $buildVersion -gt $galleryModule.Version) {
+              if (-not $galleryModule -or $buildVersion -gt $galleryModule.Version) {
                   .\build.ps1 -TaskName Publish
               } else {
                   Write-Host ('Skipping publish: {0} is already published' -f $buildVersion) -ForegroundColor Green
